# truth-debate

./: .gitignore  README.md  pyproject.toml  requirements-vast.txt  requirements.txt
configs/: gsm8k_0_5b.yaml  quick.yaml  v2_smoke.yaml  v3_gsm8k_smoke.yaml  v3_synthetic_smoke.yaml  v4_gsm8k_sft_only.yaml  v4_gsm8k_stable_rl.yaml  v5_gsm8k_light_sft_1_5b.yaml  v5_gsm8k_stable_rl_1_5b.yaml  v6_gsm8k_baseline_1_5b.yaml  v6_gsm8k_no_sft_rl_1_5b.yaml  v7_gsm8k_step5_seed1618_1_5b.yaml  v7_gsm8k_step5_seed2718_1_5b.yaml  v7_gsm8k_step5_seed3141_1_5b.yaml  v8_gsm8k_eval500_seed1618_1_5b.yaml  v8_gsm8k_eval500_seed2718_1_5b.yaml  v8_gsm8k_eval500_seed3141_1_5b.yaml  vast_0_5b.yaml
docker/: Dockerfile
scripts/: bootstrap_vast.sh  run_end_to_end.sh  run_v7_multiseed.sh  run_v8_eval500_v7_adapters.sh  smoke_test.sh
src/truth_debate/: cli.py  config.py  curriculum.py  data.py  evaluate.py  llm.py  metrics.py  parsing.py  preflight.py  prompts.py  report.py  rescore.py  reward.py  rollout.py  train_rl.py
tests/: test_data_reward.py
